# advent-of-code

./: .pre-commit-config.yaml
2019/: README.md  notes.md  template.rs
2019/1/: part1.rs  part2.rs
2019/10/: Cargo.toml
2019/10/src/: main.rs
2019/11/: Cargo.toml
2019/11/src/: main.rs
2019/12/: Cargo.toml
2019/12/src/: main.rs
2019/13/: Cargo.toml
2019/13/src/: main.rs
2019/14/: Cargo.toml
2019/14/src/: main.rs
2019/17/: Cargo.toml
2019/17/src/: main.rs
2019/19/: Cargo.toml
2019/19/src/: main.rs
2019/2/: Cargo.toml
2019/2/src/: main.rs
2019/3/: Cargo.toml
2019/3/src/: main.rs
2019/4/: Cargo.toml
2019/4/src/: main.rs
2019/5/: Cargo.toml
2019/5/src/: main.rs
2019/6/: Cargo.toml
2019/6/src/: main.rs
2019/7/: Cargo.toml
2019/7/src/: main.rs
2019/8/: Cargo.toml
2019/8/src/: main.rs
2019/9/: Cargo.toml
2019/9/src/: main.rs
2019/advent_util/: Cargo.toml
2019/advent_util/src/: lib.rs
2019/intcode/: Cargo.toml
2019/intcode/src/: lib.rs
2023/: lib.js  style.css
2023/1/: part1.html  part2.html
