[package]
name = "advent-of-code-2019-10"
version = "0.1.0"
authors = ["Jeffrey Yasskin <jyasskin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version="0.13.0", features = ["rayon"] }
euclid = "0.20.6"
num-integer = "0.1"
