[package]
name = "advent-of-code-2019-17"
version = "0.1.0"
authors = ["Jeffrey Yasskin <jyasskin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_util = {path="../advent_util"}
intcode = {path="../intcode"}
